syntax = "proto3";
package net.pb;

option go_package = "/;net_pb";

// Log represents a thread log.
message Log {
    // block is the top-level node's raw data as an ipld.Block.
    bytes block = 1;
}

message GetDocGraphRequest {}

message GetDocGraphReply {}

message PushDocGraphRequest {}

message PushDocGraphReply {}

message GetLogRequest {}

message GetLogReply {}

message PushLogRequest {
    Body body = 1;

    message Body {
        // docID is the ID of the document that is affected by the log.
        bytes docID = 1;
        // cid is the CID of the composite of the document.
        bytes cid = 2;
        // schemaRoot is the SchemaRoot of the collection that the document resides in.
        bytes schemaRoot = 3;
        // creator is the PeerID of the peer that created the log.
        string creator = 4;
        // log hold the block that represent version of the document.
        Log log = 6;
    }
}

// FetchEncryptionKeyRequest is a request to receive a doc encryption key
// from a peer that holds it.
message FetchEncryptionKeyRequest {
    // links is the list of cid links of the blocks containing encryption keys.
    repeated bytes links = 1;
    // ephemeralPublicKey is an ephemeral public of the requesting peer for deriving shared secret
    bytes ephemeralPublicKey = 2;
}

// FetchEncryptionKeyReply is a response to FetchEncryptionKeyRequest request
// by a peer that holds the requested doc encryption key.
message FetchEncryptionKeyReply {
    // links is the list of cid links of the blocks containing encryption keys.
    repeated bytes links = 1;
    // blocks is the list of blocks containing encryption keys. The order of blocks should match the order of links.
    // Every block is encrypted and contains a nonce.
    repeated bytes blocks = 2;
    // ephemeralPublicKey is an ephemeral public of the responding peer for deriving shared secret
    bytes ephemeralPublicKey = 3;
}

message GetHeadLogRequest {}

message PushLogReply {}

message GetHeadLogReply {}

// Service is the peer-to-peer network API for document sync
service Service {
    // GetDocGraph from this peer.
    rpc GetDocGraph(GetDocGraphRequest) returns (GetDocGraphReply) {}
    // PushDocGraph to this peer.
    rpc PushDocGraph(PushDocGraphRequest) returns (PushDocGraphReply) {}
    // GetLog from this peer.
    rpc GetLog(GetLogRequest) returns (GetLogReply) {}
    // PushLog to this peer.
    rpc PushLog(PushLogRequest) returns (PushLogReply) {}
    // GetHeadLog from this peer
    rpc GetHeadLog(GetHeadLogRequest) returns (GetHeadLogReply) {}
}
